--- a/Food App/index.html
+++ b/Food App/index.html
@@ -17,6 +17,6 @@
   
 
     <!-- Injected external js file -->
-    <script type="module" src="App.jsx"></script>
+    <script type="module" src="./src/App.js"></script>
   </body>
 </html>
